--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </form>
     <p id="message"></p>
 
-    <h3>Added Employees</h3>
+    <h3 id="heading">Added Employees</h3>
     <div id="employeesList">Data Not Found</div>
 
     <script src="script.js"></script>
